@@ -73,6 +73,7 @@ Version 1.0.xxxx (March xxth 2014)
 - Implemented: Support for ICY (Essent) Thermostats
 - Implemented: OpenZWave/Razberry, PowerFactor sensor
 - Implemented: Device Tab, option to display chart for sensors with Current/Percentage/Volt/Humidity
+- Implemented: OpenZWave, configuration is now written to disk every hour
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
